# guildhall

./: .gitignore  AUTHORS  COPYING  COPYING.BSD  HACKING  Makefile.am  README  README.industria  README.parscheme  README.spells  README.wak-common  README.wak-fmt  README.wak-foof-loop  README.wak-irregex  README.wak-parscheme  README.wak-riastreams  README.wak-syn-param  README.wak-trc-testing  acinclude.m4  actions.sls  autogen.sh  bundle.sls  config.sls  configure.ac  database.sls  destination.sls  hooks.sls  install  inventory.sls  package.sls  pkg-list.scm  repository.sls  setup  solver.sls  ui.sls
database/: dependencies.sls
docs/: .gitignore  dorodango.texi  guild-hall.texi  guildhall.texi  installation.texi  overview.texi  packaging.texi  quickstart.texi  reference.texi  sigil.texi
dorodango/: actions.scm  actions.sls  build-info.scm.in  bundle.scm  bundle.sls  config.scm  database.scm  destination.scm  hooks.scm  hooks.sls  inventory.scm  inventory.sls  package.scm  package.sls  repository.scm  solver.scm  ui.scm
dorodango/database/: dependencies.scm  dependencies.sls
dorodango/inventory/: mapping.scm
dorodango/private/: utils.scm  zip.scm
dorodango/solver/: choice.scm  dummy-db.scm  dummy-db.sls  internals.scm  logging.scm  promotions.scm  search-graph.scm  universe.scm
dorodango/ui/: cmdline.scm  formatters.scm
guild/: actions.scm  build-info.scm.in  bundle.scm  cli.scm  config.scm  database.scm  destination.scm  hooks.scm  inventory.scm  package.scm  repository.scm  solver.scm  ui.scm
guild/cli/: config.scm  db.scm  ui.scm
guild/database/: dependencies.scm
guild/ext/: define-values.scm  fmt.scm  foof-loop.scm  irregex.scm  let-optionals.scm  trc-testing.scm  wt-tree.scm
guild/inventory/: mapping.scm
guild/private/: utils.scm  zip.scm
guild/solver/: choice.scm  dummy-db.scm  expression.scm  internals.scm  logging.scm  promotions.scm  search-graph.scm  universe.scm
guild/spells/: algebraic-types.scm  args-fold.scm  condition.scm  filesys.scm  finite-types.scm  hash-utils.scm  logging.scm  operations.scm  pathname.scm  process.scm  record-types.scm  string-utils.scm  syntax-utils.scm  sysutils.scm  xvector.scm  zipper-tree.scm
guild/ui/: cmdline.scm  formatters.scm  guild.scm
guildhall/: actions.scm  build-info.scm.in  bundle.scm  cli.scm  config.scm  database.scm  destination.scm  hooks.scm  inventory.scm  package.scm  repository.scm  solver.scm  ui.scm
guildhall/cli/: config.scm  db.scm  ui.scm
guildhall/database/: dependencies.scm
guildhall/destination/: fhs.scm
guildhall/ext/: define-values.scm  fmt.scm  foof-loop.scm  irregex.scm  let-optionals.scm  trc-testing.scm  wt-tree.scm
guildhall/inventory/: mapping.scm
guildhall/ocelotl/: wt-tree.scm
guildhall/private/: utils.scm  zip.scm
guildhall/solver/: choice.scm  dummy-db.scm  expression.scm  internals.scm  logging.scm  promotions.scm  search-graph.scm  universe.scm
guildhall/spells/: algebraic-types.scm  args-fold.scm  condition.scm  filesys.scm  finite-types.scm  hash-utils.scm  logging.scm  operations.scm  pathname.scm  process.scm  record-types.scm  string-utils.scm  syntax-utils.scm  sysutils.scm  xvector.scm  zipper-tree.scm
guildhall/ui/: cmdline.scm  formatters.scm
inventory/: mapping.sls
net/: http.sls
ocelotl/: wt-tree.scm
private/: hook-runner.sps  utils.sls  zip.sls
private/data/: r6rs-script.mzscheme
private/support-bundle/: pkg-list.scm
scripts/: clean.scm  config.scm  create-bundle.scm  doro-update-archive.sps  doro.sps  hall.scm  http-client.sps  install.scm  list-packages.scm  maint.sps  parcour.sps  r6rs-script.guile  r6rs-script.ikarus  r6rs-script.mzscheme  r6rs-script.ypsilon  reinstall.scm  remove.scm  scan-bundles.scm  show-bundle.scm  show.scm  symlink-bundle.scm  update-archive.scm  update.scm  upgrade.scm
sigil/: actions.scm  build-info.scm.in  bundle.scm  cli.scm  config.scm  database.scm  destination.scm  hooks.scm  inventory.scm  package.scm  repository.scm  solver.scm  ui.scm
sigil/cli/: config.scm  db.scm  ui.scm
sigil/database/: dependencies.scm
sigil/ext/: define-values.scm  fmt.scm  foof-loop.scm  irregex.scm  let-optionals.scm  trc-testing.scm  wt-tree.scm
sigil/inventory/: mapping.scm
sigil/private/: utils.scm  zip.scm
sigil/solver/: choice.scm  dummy-db.scm  expression.scm  internals.scm  logging.scm  promotions.scm  search-graph.scm  universe.scm
sigil/spells/: algebraic-types.scm  args-fold.scm  condition.scm  filesys.scm  finite-types.scm  hash-utils.scm  logging.scm  operations.scm  pathname.scm  process.scm  record-types.scm  string-utils.scm  syntax-utils.scm  sysutils.scm  xvector.scm  zipper-tree.scm
sigil/ui/: formatters.scm
solver/: choice.sls  dummy-db.sls  expression.sls  internals.sls  logging.sls  promotions.sls  search-graph.sls  universe.sls
spells/: algebraic-types.scm  alist.scm  alist.sls  args-fold.scm  args-fold.sls  array-search.scm  ascii.sls  assert.scm  awk.scm  cells.scm  condition.scm  define-values.scm  define-values.sls  delimited-control.sls  delimited-readers.scm  delimited-readers.sls  engines.scm  error.scm  field-readers.sls  filesys.scm  finite-types.scm  foreign.scm  format.sls  gc.scm  gc.sls  gzip.sls  hash-utils.scm  include.scm  list-utils.sls  logging.scm  logging.sls  match.scm  misc.scm  network.scm  operations.scm  opt-args.scm  opt-args.sls  pathname.scm  ports.scm  pretty-print.ikarus.scm  (+20 more)
spells/algebraic-types/: helpers.scm  helpers.sls
spells/awk/: helpers.sls  range-tests.sls
spells/engines/: timer.scm
spells/filesys/: compat.guile.scm  compat.ikarus.scm  compat.larceny.scm  compat.mosh.sls  compat.mzscheme.sls  compat.scm  compat.ypsilon.scm
spells/foreign/: compat.ikarus.scm  compat.mzscheme.sls  compat.ypsilon.scm  config.sls.in  conjure.scm  frozen-bytes.scm  (+1 more)
tests/: actions.scm  bundle.scm  database.scm  expression.scm  hooks.scm  inventory.scm  package.scm  parcour.scm  solver.scm  tests.scm  utils.scm
ui/: cmdline.sls  dsp-universe.sls  formatters.sls
wak/: fmt.scm  foof-loop.scm  irregex.scm  syn-param.scm  trc-testing.scm
(+177 files in other folders)
